==> coright/CMSIS-DAP/interface/interface/hal/TARGET_Atmel/TARGET_ATSAM3U2C/uart.c <==
#include <sam3u.h>
#include "uart.h"
#include <string.h>
#include <rl_usb.h>
#define _CPU_CLK_HZ   SystemCoreClock
#define _CDC_BUFFER_SIZE  (256) //64
#define MIN(a, b)     (((a) < (b)) ? (a) : (b))
#define MAX(a, b)     (((a) > (b)) ? (a) : (b))
#define I8   int8_t
#define I16  int16_t
#define I32  int32_t
#define U8   uint8_t
#define U16  uint16_t
#define U32  uint32_t
#define BIT_CDC_USB2UART_CTS  (9)
#define BIT_CDC_USB2UART_RTS  (10)
#define UART_PID              (8)
#define UART_RX_PIN           (11)
#define UART_TX_PIN           (12)
#define UART_RXRDY_FLAG       (1uL << 0)              // Rx status flag
#define UART_TXRDY_FLAG       (1uL << 1)              // Tx RDY Status flag
#define UART_TXEMPTY_FLAG     (1uL << 9)              // Tx EMPTY Status flag
#define UART_ENDTX_FLAG       (1uL << 4)              // Tx end flag
#define UART_RX_ERR_FLAGS     (0xE0)                  // Parity, framing, overrun error
#define UART_TX_INT_FLAG      UART_TXEMPTY_FLAG
#define PIO_UART_PIN_MASK     ((1uL << UART_RX_PIN) | (1uL << UART_TX_PIN))
#define PMC_BASE_ADDR         (0x400E0400)
#define PMC_PCER              *(volatile U32*)(PMC_BASE_ADDR + 0x10)    // Peripheral clock enable register
#define UART_BASE_ADDR        (0x400E0600)
#define OFF_UART_CR           (0x00)
#define OFF_UART_MR           (0x04)
#define OFF_UART_IER          (0x08)
#define OFF_UART_IDR          (0x0C)
#define OFF_UART_IMR          (0x10)
#define OFF_UART_SR           (0x14)

int32_t uart_initialize (void) {
  //
	// Initially, disable UART interrupt
	//
  UART_IntrDis();
    
  PMC->PMC_WPMR  = 0x504D4300;                              /* Disable write protect  */
  PMC->PMC_PCER0 = (1 << UART_PID) | (1 << 10);           // Enable peripheral clock for UART + PIOA
  PMC->PMC_WPMR  = 0x504D4301;                              /* Enable write protect */
  PIOA_PDR   = PIO_UART_PIN_MASK;         // Enable peripheral output signals (disable PIO Port A)
  PIOA_ABSR &= ~PIO_UART_PIN_MASK;        // Select "A" peripherals on PIO A (UART Rx, Tx)
  
  PIOA->PIO_MDER = PIO_UART_PIN_MASK;     //Enable Multi Drive Control (Open Drain) on the UART Lines so that they don't power nRF51  
    
  UART_CR    = (0)
             | (1 <<  2)                  // RSTRX: Reset Receiver: 1 = The receiver logic is reset.
             | (1 <<  3)                  // RSTTX: Reset Transmitter: 1 = The transmitter logic is reset.
             ;
  UART_CR    = (0)
             | (0 <<  2)                  // RSTRX: Release Receiver reset
             | (0 <<  3)                  // RSTTX: Release Transmitter reset
             | (1 <<  4)                  // RXEN: Receiver Enable
             | (0 <<  5)                  // RXDIS: Do not disable receiver
             | (1 <<  6)                  // TXEN: Transmitter Enable
             | (0 <<  7)                  // TXDIS: Do not disable transmitter
             | (1 <<  8)                  // RSTSTA: Reset status/error bits
             ;
  UART_MR    = (0)
             | (4 <<  9)                  // PAR: Parity Type: 4     => No parity
             | (0 << 14)                  // CHMODE: Channel Mode: 0 => Normal mode
             ;
  _SetBaudrate(9600);
  _FlowControl = UART_FLOW_CONTROL_NONE;
  UART_IDR   = (0xFFFFFFFF);              // Disable all interrupts
  //
	// Reset all status variables
	//
	_ResetBuffers();
  //
	// Enable UART Tx/Rx interrupts
	//
  UART_IER   = (0)
             | (1 <<  0)                  // Enable Rx Interrupt
             | (0 <<  9)                  // Initially disable TxEmpty Interrupt
             | (0 <<  4)                  // Initially disable ENDTx Interrupt
             ;
  //  
  //Set "RTS" to LOW to indicate that we are ready to receive
  //
  PIOA_CODR      = (1uL << BIT_CDC_USB2UART_RTS);  // RTS low: Ready to receive data
  PIOA->PIO_OER  = (1uL << BIT_CDC_USB2UART_RTS);  // Pins == output
  //PIOA->PIO_MDER = (1uL << BIT_CDC_USB2UART_RTS);
  PIOA->PIO_PER  = (1uL << BIT_CDC_USB2UART_RTS);  // Pins == GPIO control
 // PIOA->PIO_IER  = (1uL << BIT_CDC_USB2UART_RTS); 
  
 // PIOA->PIO_PUDR = (1uL << BIT_CDC_USB2UART_CTS);
  //PIOA->PIO_MDER = (1uL << BIT_CDC_USB2UART_CTS); //Open Drain CTS
  PIOA->PIO_PER  = (1uL << BIT_CDC_USB2UART_CTS);  // Pins == GPIO control
  PIOA->PIO_ODR  = (1uL << BIT_CDC_USB2UART_CTS);  // Pins == Input
  PIOA->PIO_IER  = (1uL << BIT_CDC_USB2UART_CTS); 
  
  //
	// Finally, re-enable UART interrupt
	//
  //NVIC_SetPriority(UART_IRQn, 1);
  UART_IntrEna();
  return 1;  // O.K. ???
}

int32_t uart_uninitialize (void) {
  UART_IntrDis();
  UART_IDR   = (0xFFFFFFFF);              // Disable all interrupts
  _ResetBuffers();
  return 1;
}

int32_t uart_set_configuration (UART_Configuration *config) {
  //
	// UART always works with no parity, 1-stop bit
	// Parity bit is configurable but not used in current implementation
	//
	UART_IntrDis();
  UART_IDR   = (0xFFFFFFFF);   // Disable all interrupts
  UART_CR    = (0)
             | (1 <<  5)                  // RXDIS: Disable receiver
             | (1 <<  7)                  // TXDIS: Disable transmitter
             | (1 <<  8)                  // RSTSTA: Reset status/error bits
             ;
  _FlowControl = config->FlowControl;
  _SetBaudrate(config->Baudrate);
  UART_CR    = (0)
             | (0 <<  2)                  // RSTRX: Release Receiver reset
             | (0 <<  3)                  // RSTTX: Release Transmitter reset
             | (1 <<  4)                  // RXEN: Receiver Enable
             | (0 <<  5)                  // RXDIS: Do not disable receiver
             | (1 <<  6)                  // TXEN: Transmitter Enable
             | (0 <<  7)                  // TXDIS: Do not disable transmitter
             | (1 <<  8)                  // RSTSTA: Reset status/error bits
             ;
  UART_IER   = (0)
             | (1 <<  0)                  // Enable Rx Interrupt
             | (0 <<  9)                  // Initially disable TxEmpty Interrupt
             | (0 <<  4)                  // Initially disable ENDTx Interrupt
             ;
  UART_IntrEna();
  return 1;
}

int32_t uart_get_configuration (UART_Configuration *config) {
	config->Baudrate    = _Baudrate;
	config->DataBits    = UART_DATA_BITS_8;
	config->FlowControl = (UART_FlowControl) _FlowControl;//UART_FLOW_CONTROL_NONE;
	config->Parity      = UART_PARITY_NONE;
	config->StopBits    = UART_STOP_BITS_1;
  return 1;
}

int32_t uart_write_free(void) {
    int32_t bytesFree=0;
    bytesFree =  _NumBytesWriteFree(&_WriteBuffer);	
    
    //are there still bytes to send?   
    if(bytesFree < _CDC_BUFFER_SIZE)
    {
        bytesFree=0;        
        //pause to give NRF chip time to assert CTS line if needed
        //os_dly_wait(4);
    }
    
    return bytesFree;
}

int32_t uart_write_data (uint8_t *data, uint16_t size) {
	uint16_t NumBytesWritten;
	uint16_t NumBytesAtOnce;
	U8* pWrapAround;
    U8* pWrite;
   //
   // Early out in case nothing needs to be written or buffer is full
   //
    
    size = MIN(_NumBytesWriteFree(&_WriteBuffer), size);
    if (size == 0) {  // Early out
        return 0;
	}
    //
	// Copy data into buffer. Also consider wrap-around
	//
    NumBytesWritten = size;
    pWrite = _WriteBuffer.pWrite;
    pWrapAround = (U8*)(_WriteBuffer.acBuffer + sizeof(_WriteBuffer.acBuffer));
	if (size) {
        do {
          NumBytesAtOnce = MIN(size, (int)(pWrapAround - pWrite));   // Copy as much as possible and consider wrap-around
          memcpy(pWrite, data, NumBytesAtOnce);
          pWrite += NumBytesAtOnce;
          if (pWrite == pWrapAround) {
              pWrite = _WriteBuffer.acBuffer;
          }
          size -= NumBytesAtOnce;
          data += NumBytesAtOnce;
        } while (size);
    }
    _WriteBuffer.pWrite = pWrite;
    //
	// Trigger transfer if not already in progress
	//
  
  if (_TxInProgress == 0 && ((PIOA->PIO_PDSR>>BIT_CDC_USB2UART_CTS) & 1) == 0 ) {  // Trigger first Tx transfer
        _Send1();
	}
  else{
      PIOA->PIO_MDER = (1<<UART_TX_PIN);
  }

  return NumBytesWritten;
}

int32_t uart_read_data (uint8_t *data, uint16_t size) {
	uint16_t NumBytesRead;
	uint16_t NumBytesAtOnce;
  uint16_t v;
	U8* pWrapAround;
  U8* pRead;
	
  v = _CDC_BUFFER_SIZE - _NumBytesWriteFree(&_ReadBuffer);
	size = MIN(v, size);
  if (size == 0) {  // Early out
    return 0;
	}
	NumBytesRead = size;
  pWrapAround = (U8*)(_ReadBuffer.acBuffer + sizeof(_ReadBuffer.acBuffer));
  pRead = _ReadBuffer.pRead;
	if (size) {
    do {
      NumBytesAtOnce = MIN(size, (int)(pWrapAround - pRead));   // Copy as much as possible and consider wrap-around
      memcpy(data, pRead, NumBytesAtOnce);
			pRead += NumBytesAtOnce;
      if (pRead == pWrapAround) {
				pRead = _ReadBuffer.acBuffer;
			}
			size -= NumBytesAtOnce;
			data += NumBytesAtOnce;
		} while (size);
  }
  _ReadBuffer.pRead = pRead;
  return NumBytesRead;
}

void UART_IRQHandler (void) {
  int Status;
  uint32_t v;
  U8 c;
	U8* pWrapAround;

  Status = UART_SR;                                 // Examine status register
  if (Status & UART_RX_ERR_FLAGS) {                 // In case of error: Set RSTSTA to reset status bits PARE, FRAME, OVRE and RXBRK
    UART_CR = (1 << 8);
  }
  //
	// Handle Rx event
	//
  if (Status & UART_RXRDY_FLAG) {                   // Data received?
    c = UART_RHR;
    v = _NumBytesWriteFree(&_ReadBuffer);
    if (v) {
        *_ReadBuffer.pWrite++ = c;
        pWrapAround = (U8*)(_ReadBuffer.acBuffer + sizeof(_ReadBuffer.acBuffer));
        if (_ReadBuffer.pWrite == pWrapAround) {
            _ReadBuffer.pWrite = _ReadBuffer.acBuffer;
        }
    }
  }
  //
	// Handle Tx event
	//
  if (Status & UART_IMR & UART_TX_INT_FLAG) {       // Byte has been send by UART
    v = _CDC_BUFFER_SIZE - _NumBytesWriteFree(&_WriteBuffer); // NumBytes in write buffer
    if (v == 0) {                              // No more characters to send ?: Disable further tx interrupts
        UART_IDR = UART_TX_INT_FLAG;
        //enable open-drain
        PIOA->PIO_MDER = (1<<UART_TX_PIN);
        _TxInProgress = 0;
    } else if (((PIOA->PIO_PDSR>>BIT_CDC_USB2UART_CTS) & 1) == 0){
        _Send1();  // More bytes to send? Trigger sending of next byte
    }
    else{        
        UART_IDR = UART_TX_INT_FLAG;            // disable Tx interrupt
        //enable open-drain
        PIOA->PIO_MDER = (1<<UART_TX_PIN);
    }
  }
}
